fix color overlay

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -23,7 +23,7 @@
     <title>Kidzo</title>
   </head>
   <body>
-    <div class='dark:border dark:bg-slate-900 dark:text-slate-200' id="root"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
