--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://js.pusher.com/beams/1.0/push-notifications-cdn.js"></script>
 
     <!-- Dela Gothic -->
     <link
